inserted URL links on the footer

--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
   </head>
   <body>
     <footer>
-      Project built by <a href="">Tshidi Hlalele</a>, code hosted on
-      <a href="">GitHub</a> and website hosted on <a href="">Netlify</a>
+      <h1>Hello</h1>
+      Project built by
+      <a href="https://github.com/Tshidycodes" target="_blank">Tshidi Hlalele</a
+      >, code hosted on
+      <a href="https://github.com/Tshidycodes/Weather-app" target="_blank"
+        >GitHub</a
+      >
+      and website hosted on
+      <a href="https://all-seasons-weather.netlify.app/" target="_blank"
+        >Netlify</a
+      >
     </footer>
   </body>
 </html>
