Updated the footer content to be concise.

--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
   </head>
   <body>
     <footer>
-      <h1>Hello</h1>
-      Project built by
+      Coded by
       <a href="https://github.com/Tshidycodes" target="_blank">Tshidi Hlalele</a
-      >, code hosted on
-      <a href="https://github.com/Tshidycodes/Weather-app" target="_blank"
-        >GitHub</a
+      >, is
+      <a href="https://github.com/Tshidycodes/Weather-app" target="_blank">
+        open-sourced by GitHub</a
       >
-      and website hosted on
-      <a href="https://all-seasons-weather.netlify.app/" target="_blank"
-        >Netlify</a
+      and
+      <a href="https://all-seasons-weather.netlify.app/" target="_blank">
+        hosted on Netlify</a
       >
     </footer>
   </body>
